serve logo to client
