# src/main/java/com/mendix/ux/sassaas/SessionsController.java
@@ -4,9 +4,11 @@ import com.mendix.ux.sassaas.specs.api.SessionsApi;
 import com.mendix.ux.sassaas.specs.model.KeyValue;
 import com.mendix.ux.sassaas.specs.model.ResultResponse;
 import com.mendix.ux.sassaas.utils.SassCompiler;
+import org.apache.commons.io.FileUtils;
 import org.apache.commons.io.FilenameUtils;
 import org.apache.commons.io.IOUtils;
 import org.json.JSONObject;
+import org.json.JSONTokener;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.springframework.beans.factory.annotation.Autowired;
@@ -34,10 +36,13 @@ public class SessionsController implements SessionsApi {
     private final String WORKSPACE_NAME = "workspace";
     private final String OUTPUT_CSS = "out.css";
     private final String OUTPUT_ZIP = "out.zip";
+    private final String METADATA = "metadata.json";
+    private final String METADATA_LOGO = "logo";
 
     @Override
     @RequestMapping(value="/css", method = RequestMethod.GET)
     public File getCSSOutput(@PathVariable("sessionId") String sessionId) throws Exception {
+        validateSessionId(sessionId);
         File inputFile = writeInputStreamToFile(sessionId, getClass().getResourceAsStream("/default-theme.zip"));
         File sessionDir = getSessionDir(sessionId);
         File variables = new File(sessionDir, VARIABLE_FILENAME);
@@ -61,18 +66,54 @@ public class SessionsController implements SessionsApi {
     }
 
     @Override
+    @RequestMapping(value="/logo", method = RequestMethod.GET)
+    public File getLogo(@PathVariable("sessionId") String sessionId) throws Exception {
+        validateSessionId(sessionId);
+        File sessionDir = getSessionDir(sessionId);
+        File metadata = new File(sessionDir, METADATA);
+        String metadataString = FileUtils.readFileToString(metadata);
+        JSONTokener tokener = new JSONTokener(metadataString);
+        JSONObject jsonObject = new JSONObject(tokener);
+        String filename = jsonObject.getString(METADATA_LOGO);
+        File logo = new File(sessionDir, filename);
+        response.setContentType("image");
+        response.setHeader("Content-Disposition", String.format("attachment; filename=%s", filename));
+        InputStream inputStream = new FileInputStream(logo);
+        OutputStream outputStream = response.getOutputStream();
+        try {
+            IOUtils.copy(inputStream, outputStream);
+        } catch (IOException e) {
+            logger.info(e.getMessage());
+        } finally {
+            IOUtils.closeQuietly(inputStream);
+            IOUtils.closeQuietly(outputStream);
+        }
+        return null;
+    }
+
+    @Override
     @RequestMapping(value="/logo", method = RequestMethod.POST)
     public ResultResponse uploadLogo(@PathVariable("sessionId") String sessionId, @RequestPart("file") MultipartFile fileDetail) throws Exception {
         validateSessionId(sessionId);
         String extension = FilenameUtils.getExtension(fileDetail.getOriginalFilename());
         String targetFilename = String.format("logo.%s", extension);
-        File outfile = new File(getSessionDir(sessionId), targetFilename);
+        File sessionDir = getSessionDir(sessionId);
+        File outfile = new File(sessionDir, targetFilename);
         OutputStream outputStream = new FileOutputStream(outfile);
         try {
             IOUtils.copy(fileDetail.getInputStream(), outputStream);
         } finally {
             IOUtils.closeQuietly(outputStream);
             IOUtils.closeQuietly(fileDetail.getInputStream());
+        }
+        File logoMetadata = new File(sessionDir, METADATA);
+        JSONObject jsonObject = new JSONObject();
+        jsonObject.put(METADATA_LOGO, targetFilename);
+        FileOutputStream outputStream1 = new FileOutputStream(logoMetadata);
+        try {
+            outputStream1.write(jsonObject.toString(2).getBytes());
+        } finally {
+            IOUtils.closeQuietly(outputStream1);
         }
         ResultResponse result = new ResultResponse();
         result.setMessage("Upload completed");
@@ -82,6 +123,7 @@ public class SessionsController implements SessionsApi {
     @Override
     @RequestMapping(value="/variables", method = RequestMethod.PUT)
     public ResultResponse setVariables(@PathVariable("sessionId") String sessionId, @RequestBody List<KeyValue> variables) throws Exception {
+        validateSessionId(sessionId);
         File outfile = new File(getSessionDir(sessionId), VARIABLE_FILENAME);
         JSONObject jsonObject = new JSONObject();
         for (KeyValue item : variables)
@@ -100,6 +142,7 @@ public class SessionsController implements SessionsApi {
     @Override
     @RequestMapping(value="/zip", method = RequestMethod.GET)
     public File getZipOutput(@PathVariable("sessionId") String sessionId) throws Exception {
+        validateSessionId(sessionId);
         File inputFile = writeInputStreamToFile(sessionId, getClass().getResourceAsStream("/default-theme.zip"));
         File sessionDir = getSessionDir(sessionId);
         File variables = new File(sessionDir, VARIABLE_FILENAME);
